Make ComponentCollection slices return Deques